# zchat

./: .env.example  .gitignore  AGENTS.md  deployment.md  docker-compose.go.yml  docker-compose.yml
backend/: .dockerignore  .env.example  .gitignore  AGENTS.md  Dockerfile  README.md  create_docker_image.sh  go.mod  go.sum  inspect_db.py  pyproject.toml  requirements.txt  start.ps1  start.sh  start_docker_image.sh  test_db_init.py
backend/app/: config.py  database.py  db_init.py  main.py
backend/app/api/: __init__.py  auth.py  browser.py  conversations.py  messages.py  uploads.py  users.py  websocket.py
backend/app/models/: __init__.py  conversation.py  message.py  user.py
backend/app/schemas/: __init__.py  conversation.py  message.py  user.py
backend/app/services/: auth_service.py  conversation_service.py  message_service.py  user_service.py
backend/app/sql/: README.md  conversation_participants.sql  conversations.sql  indexes.sql  messages.sql  migration_edit_delete.sql  users.sql
backend/app/utils/: __init__.py  encryption.py  security.py
backend/cmd/server/: main.go
backend/docs/: swagger.json
backend/internal/config/: config.go
backend/internal/domain/: models.go  repository.go
backend/internal/httpserver/: auth_handlers.go  auth_middleware.go  browser_handlers.go  message_handlers.go  (+6 more)
backend/scripts/: README.md  __init__.py  cleanup_files.py  db_manager.py  migrate_v2.py  migration_add_is_read.py
backend/tests/: conftest.py  test_auth.py  test_conversation_duplicates.py  test_db_init.py  test_messages.py  test_uploads.py  test_users.py
(+164 files in other folders)
